# Study-projects

Course-1/Cpp-Projects/Assignments-2024/FantasySimulator/: fantasySimulator.cpp  task.txt
Course-1/Cpp-Projects/Data-Structures-and-Algorithms-2024/Assignment-1/: task1.cpp  task2.cpp
Course-1/Cpp-Projects/Data-Structures-and-Algorithms-2024/Assignment-9/: task1.cpp
Course-1/Cpp-Projects/Liner-Algebra-2024/PA. Eigenvalues and eigenvectors/: Eigenvalues_and_eigenvectors.cpp  task.txt
Course-1/Cpp-Projects/Liner-Algebra-2024/PA. Jacobi method/: Jacobi_method.cpp  task.txt
Course-1/Cpp-Projects/Liner-Algebra-2024/PA. Least square approximation/: Least_square_appr.cpp  task.txt
Course-1/Cpp-Projects/Liner-Algebra-2024/PA. Seidel method/: Seidel_method.cpp  task.txt
Course-1/Cpp-Projects/Liner-Algebra-2024/PA. Solving SLAE/: SLAE.cpp  task.txt
Course-1/Cpp-Projects/Summer-2024/hw1/: CMakeLists.txt  Dockerfile  Makefile
Course-1/Cpp-Projects/Summer-2024/hw1/src/: allocator.cpp  allocator.h
Course-1/Cpp-Projects/Summer-2024/hw1/tests/: allocator_test.cpp
Course-1/Cpp-Projects/Summer-2024/hw2/: CMakeLists.txt  Makefile
Course-1/Cpp-Projects/Summer-2024/hw2/src/: token_parser.cpp  token_parser.h
Course-1/Cpp-Projects/Summer-2024/hw2/tests/: token_parser_test.cpp
Course-1/Cpp-Projects/Summer-2024/hw3/: CMakeLists.txt  Makefile
Course-1/Cpp-Projects/Summer-2024/hw3/src/: long_arithmetics.cpp  long_arithmetics.h
Course-1/Cpp-Projects/Summer-2024/hw3/tests/: long_arithmetics_test.cpp
Course-1/Cpp-Projects/Summer-2024/hw4/: CMakeLists.txt  Makefile
Course-1/Cpp-Projects/Summer-2024/hw4/src/: format.h
Course-1/Cpp-Projects/Summer-2024/hw4/tests/: format_test.cpp
Course-1/Cpp-Projects/Summer-2024/hw5/: CMakeLists.txt  Makefile
Course-1/Cpp-Projects/Summer-2024/hw5/src/: avl.cpp  avl.h
Course-1/Cpp-Projects/Summer-2024/hw6/: Makefile  setup.py
Course-1/Java-Projects/Data-Structures-and-Algorithms-2024/Assignment-10/: task1.java
Course-1/Java-Projects/Data-Structures-and-Algorithms-2024/Assignment-2/: task1.java  task2.java
Course-1/Java-Projects/Data-Structures-and-Algorithms-2024/Assignment-3/: task1.java  task2.java
Course-1/Java-Projects/Data-Structures-and-Algorithms-2024/Assignment-4/: task1.java
Course-1/Java-Projects/Data-Structures-and-Algorithms-2024/Assignment-5/: task1.java  task2.java
Course-1/Java-Projects/Data-Structures-and-Algorithms-2024/Assignment-6/: task1.java
Course-1/Java-Projects/Data-Structures-and-Algorithms-2024/Assignment-7/: task1.java
Course-1/Java-Projects/Data-Structures-and-Algorithms-2024/Assignment-8/: task1.java
Course-1/Java-Projects/Introduction-To-Programming-2023/Assignment4/: main.java  task.txt
Course-1/Java-Projects/Introduction-To-Programming-2023/UniversityManagementSystem/: main.java  task.txt
(+53 files in other folders)
